# synthflow

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  requirements.txt
backend/app/: config.py  main.py
docs/: DEVELOPMENT_PLAN.md  PRD.md  TEST_CASES.md
engine/: pyproject.toml
engine/synthflow/: __init__.py  causal_dag.py  core.py  llm_client.py  orchestrator.py
engine/synthflow/engines/: __init__.py  anomaly_engine.py  code_synthesizer.py  constraint_engine.py  correlation_engine.py  intent_engine.py  knowledge_graph.py  memory_store.py  pattern_library.py  realism_engine.py  scenario_engine.py  schema_intelligence.py  sdv_multiplier.py  self_healing.py  stats_engine.py  validation_engine.py
engine/synthflow/models/: __init__.py  schemas.py
engine/synthflow/privacy/: __init__.py  presidio_guard.py
engine/synthflow/quality/: __init__.py
engine/synthflow/utils/: __init__.py  helpers.py  logger.py
engine/tests/: __init__.py  conftest.py  test_causal_dag.py  test_code_synthesizer.py  test_helpers.py  test_intent_engine.py  test_knowledge_graph.py  test_llm_client.py  test_models.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
