[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthflow"
version = "2.0.0"
description = "Autonomous Synthetic Data Orchestration Platform"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ambrish Nigam", email = "ambrish.nigam@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "faker>=25.0.0",
    "tenacity>=8.3.0",
    "duckdb>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["synthflow*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
